src/test/resources/invalid_tests/InvalidIOShape1.cnna
architecture InvalidIOShape1(){
    def input Q(-oo:+oo)^{10, 2} in
    def output Q(0:1)^{10, 2, 2, 2} out

    in ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=10) ->
    Softmax() ->
    out
}